--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lynk-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A utility library for data manipulation and calculations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.0",
+    "@types/jquery": "^3.5.32",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
